[gd_scene load_steps=3 format=2]

[ext_resource path="res://editor tools/forms/effect_arg.gd" type="Script" id=1]
[ext_resource path="res://editor tools/panels/desc_panel.tscn" type="PackedScene" id=2]

[node name="WindowDialog" type="WindowDialog"]
visible = true
margin_right = 1526.0
margin_bottom = 676.0
window_title = "effect argument"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1516.0
margin_bottom = 666.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1506.0
margin_bottom = 51.0
text = "Warning! In case of manual result editing consider all operators as having the same priority - a+b*c is (a+b)*c
Warning! Use argument links and argument helper hints with caution."
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 1506.0
margin_bottom = 131.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 283.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 283.0
margin_bottom = 24.0
text = "Parent effect (for helper)"

[node name="parent" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 283.0
margin_bottom = 58.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 287.0
margin_right = 445.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 158.0
margin_bottom = 24.0
text = "Source object"

[node name="mode" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 28.0
margin_right = 158.0
margin_bottom = 58.0

[node name="VBoxContainer8" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" groups=[
"arg",
"mod2",
"mod3",
]]
margin_left = 449.0
margin_right = 563.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer8"]
margin_right = 114.0
margin_bottom = 24.0
text = "argument"

[node name="arg" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer8"]
margin_top = 28.0
margin_right = 114.0
margin_bottom = 58.0

[node name="VBoxContainer10" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" groups=[
"arg",
"mod4",
]]
margin_left = 567.0
margin_right = 669.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer10"]
margin_right = 102.0
margin_bottom = 24.0
text = "attribute"

[node name="attr" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer10"]
margin_top = 28.0
margin_right = 102.0
margin_bottom = 58.0

[node name="VBoxContainer12" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" groups=[
"arg",
"mod5",
]]
margin_left = 673.0
margin_right = 775.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer12"]
margin_right = 102.0
margin_bottom = 24.0
text = "attribute"

[node name="attr" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer12"]
margin_top = 28.0
margin_right = 102.0
margin_bottom = 58.0

[node name="VBoxContainer9" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" groups=[
"arg",
"mod0",
"mod1",
"mod3",
]]
margin_left = 779.0
margin_right = 881.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer9"]
margin_right = 102.0
margin_bottom = 24.0
text = "attribute"

[node name="attr" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer9"]
margin_top = 28.0
margin_right = 102.0
margin_bottom = 62.0

[node name="VBoxContainer11" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" groups=[
"arg",
"mod2",
"mod3",
]]
margin_left = 885.0
margin_right = 1034.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer11"]
margin_right = 149.0
margin_bottom = 24.0

[node name="dyn" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer11"]
margin_top = 28.0
margin_right = 149.0
margin_bottom = 60.0
text = "is dynamic"

[node name="desc_panel" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 1038.0
margin_right = 1352.0
margin_bottom = 76.0

[node name="Label" type="TextEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 1506.0
margin_bottom = 376.0
rect_min_size = Vector2( 0, 40 )
size_flags_vertical = 3

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 380.0
margin_right = 1506.0
margin_bottom = 621.0
rect_min_size = Vector2( 0, 40 )
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 625.0
margin_right = 1506.0
margin_bottom = 655.0

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 47.0
margin_bottom = 30.0
text = "OK"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 51.0
margin_right = 140.0
margin_bottom = 30.0
text = "Cancel"
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/parent" to="." method="select_parent"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/mode" to="." method="mode_select"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Button" to="." method="commit"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Button2" to="." method="revert"]
